tests/errors/05_function_var_same_name.f
      INTEGER FUNCTION F()
      INTEGER F
      F = 1
      RETURN
      END
